[package]
name = "edge-packager"
version = "0.1.0"
edition = "2021"
description = "CDN edge WASM application for repackaging DASH/HLS CMAF media from CBCS to CENC encryption"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
sandbox = ["dep:axum", "dep:tokio", "dep:reqwest", "dep:tower-http", "dep:tracing-subscriber"]

[[bin]]
name = "sandbox"
path = "src/bin/sandbox.rs"
required-features = ["sandbox"]

[dependencies]
aes = "0.8"
base64 = "0.22"
cbc = "0.1"
ctr = "0.9"
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
url = { version = "2", features = ["serde"] }
log = "0.4"
cipher = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasi = "0.14"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
reqwest = { version = "0.12", features = ["blocking"], optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }
tracing-subscriber = { version = "0.3", optional = true }

[profile.release]
opt-level = "s"
lto = true
strip = true
